# agent_mvp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.claude/: constitution.md  git-command.md  python-style.md
cli/: CLAUDE.md  __init__.py  command.py  config.py  main.py  render.py  repl.py
doc/: CLAUDE.md  DDD.md  PRD.md  plan.md
doc/agent-design/: 01-mental-model.md  02-request-journey.md  03-runtime-and-middleware.md  04-data-model-and-session.md  05-tool-and-llm.md  06-cross-cutting.md  07-design-principle.md  08-extension-guide.md  09-limitation-and-evolution.md  10-evaluation.md  README.md
doc/ddd/: 01ddd.md  02ddd.md  03ddd.md
doc/plan/: 01plan.md  02plan.md  03plan.md
doc/prd/: 02prd.md  03prd.md
doc/refactor/: 01-run-log-and-case-loader.md
eval/: __init__.py  __main__.py  baseline.json  case.py  config.py  loader.py  online.py  replay.py  report.py  runner.py
eval/case/: cal.jsonl  calc.json  calculator.jsonl  greet.json  greeting.jsonl
eval/cassette/: cal.jsonl  calc.json  calculator.jsonl  greet.json  greeting.jsonl
src/: CLAUDE.md  __init__.py  agent.py  config.py  message.py  runtime.py  state.py
src/llm/: __init__.py  base.py  deepseek_client.py
src/middleware/: __init__.py  approval.py  base.py  context.py  event.py  log.py  max_turn.py  memory.py  observe.py  prefix.py  record.py  retry.py  system_prompt.py  trace.py
src/schema/: __init__.py  message.py  state.py
src/session/: __init__.py  checkpointer.py  file_checkpointer.py  manager.py
src/tool/: __init__.py  base.py  bash.py  calculator.py  edit.py  fetch.py  glob.py  grep.py  read.py  registry.py  search.py  todo.py  weather.py  write.py
src/util/: __init__.py  event.py  stack.py  system_prompt.py
test/: agent_test.py  calculator_test.py  config_test.py  deepseek_client_test.py  message_test.py  registry_test.py  runtime_test.py  state_test.py
test/cli/: command_test.py  main_test.py  render_test.py  repl_test.py
test/eval/: case_test.py  loader_test.py  main_test.py  online_test.py  replay_test.py  report_test.py  runner_test.py
test/llm/: base_test.py  deepseek_client_test.py
test/middleware/: approval_test.py  base_test.py  context_test.py  log_test.py  max_turn_test.py  memory_test.py  observe_test.py  prefix_test.py  record_test.py  retry_test.py  trace_test.py
test/schema/: message_test.py  state_test.py
test/session/: checkpointer_test.py  file_checkpointer_test.py  manager_test.py
test/tool/: base_test.py  bash_test.py  edit_test.py  fetch_test.py  glob_test.py  grep_test.py  read_test.py  registry_test.py  (+4 more)
(+1 files in other folders)
