[project]
name = "agent-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
]


# 配置 pytest
[tool.pytest.ini_options]
testpaths = ["test"]                             # 测试目录
python_files = ["*_test.py"]                     # 测试文件命名：{module}_test.py
pythonpath = ["."]                               # 仓库根加入 sys.path，便于 import src / cli
addopts = '--cov=src --cov-report=term-missing -m "not slow" --import-mode=importlib'  # 覆盖率；默认跳过 @slow；importlib 模式允许子目录同名 base_test.py
markers = [
    "slow: 真实外部 API 冒烟测试（默认跳过，用 `-m slow` 显式触发，需 DEEPSEEK_API_KEY）",
]


# 配置代码规范
[tool.ruff]
line-length = 150
# 排除文件
exclude = [
    ".git",
    ".github",       # Git 相关
    ".mypy_cache",   # MyPy 缓存
    ".pytest_cache", # Pytest 缓存
    ".ruff_cache",   # Ruff 缓存
    ".venv",         # 虚拟环境
    "__pycache__",   # Python 缓存
    "build",
    "dist",          # 构建产物
    "migrations",    # 数据库迁移文件
    "algorithm",     # 不对算法文件进行修改
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle 错误
    "W",   # pycodestyle 警告
    "F",   # pyflakes（未使用的导入等）
    "I",   # isort（导入排序）
    "TID", # flake8-tidy-imports
]

extend-select = ["ASYNC", "ASYNC1"] # 异步代码检查
ignore = ["E402", "F401", "F403"]   # 忽略某些规则

# ============================================================================
# isort 配置（控制导入排序）
# ============================================================================
[tool.ruff.lint.isort]

known-local-folder = ["app", "tests"] # 本地模块

# 导入分组顺序：
section-order = [
    "future",           # from __future__ import ...
    "standard-library", # Python 标准库
    "third-party",      # 第三方库
    "first-party",      # 你的项目模块
    "local-folder",     # 本地相对导入
]

lines-after-imports = 2           # 导入块后空 2 行
force-single-line = false         # 不强制单行导入
force-sort-within-sections = true # 在每个分组内排序


[tool.ruff.format]
quote-style = "double"       # 使用双引号
indent-style = "space"       # 使用空格缩进
docstring-code-format = true # 格式化 docstring 中的代码

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true # 保留运行时类型注解

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true # 允许 *args 使用 Any 类型

[tool.ruff.lint.pydocstyle]
convention = "google"        # 使用 Google 风格的文档字符串
ignore-var-parameters = true # 忽略变量参数的文档
